@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-23T08:09:09Z",
-  "count_outdated" : 4789,
-  "uniques_outdated" : 1386,
-  "count" : 4872,
+  "timestamp" : "2023-07-24T00:45:44Z",
+  "count_outdated" : 4792,
+  "uniques_outdated" : 1387,
+  "count" : 4873,
   "uniques" : 1437,
   "clones" : [
-    {
-      "timestamp": "2023-07-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 4,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-07-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
