@@ -1,12 +1,7 @@
 {
-  "count": 82,
+  "count": 81,
   "uniques": 35,
   "clones": [
-    {
-      "timestamp": "2023-07-09T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 4,
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-07-23T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
